Ignore nvidia commit
Signed-off-by: Pavel Kohout <pavel.kohout@recetox.muni.cz>

--- a/openfold/environment.yml
+++ b/openfold/environment.yml
@@ -35,4 +35,4 @@ dependencies:
       - deepspeed==0.12.4
       - dm-tree==0.1.6
       - git+https://github.com/NVIDIA/dllogger.git
-      - git+https://github.com/Dao-AILab/flash-attention.git@5b838a8
+#      - git+https://github.com/Dao-AILab/flash-attention.git@5b838a8
