--- a/openfold/environment.yml
+++ b/openfold/environment.yml
@@ -31,8 +31,8 @@ dependencies:
   - bioconda::kalign2==2.04
   - bioconda::mmseqs2
   - pytorch::pytorch=1.12.*
-  - pip:
-      - deepspeed==0.12.4
-      - dm-tree==0.1.6
-      - git+https://github.com/NVIDIA/dllogger.git
-#      - git+https://github.com/Dao-AILab/flash-attention.git@5b838a8
+#  - pip:
+#      - deepspeed==0.12.4
+#      - dm-tree==0.1.6
+#      - git+https://github.com/NVIDIA/dllogger.git
+##      - git+https://github.com/Dao-AILab/flash-attention.git@5b838a8
